src/base-envoy copy 2.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - exact: "*"
                        allow_methods: "GET, POST, OPTIONS"
                        allow_headers: "X-App-Stack-Version, Content-Type"
                        expose_headers: "X-App-Stack-Version"

                      routes:
                        
                        - match:
                            prefix: "/app1/service-a/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "1"
                          route:
                            cluster: app1-service-a-0-0-30
                        
                        - match:
                            prefix: "/app1/service-b/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "1"
                          route:
                            cluster: app1-service-b-0-0-4

                        - match:
                            prefix: "/shared/service-s/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "1"
                          route:
                            cluster: app1-service-s-0-0-1
                        
                        - match:
                            prefix: "/app1/service-a/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "2"
                          route:
                            cluster: app1-service-a-0-0-32
                        
                        - match:
                            prefix: "/app1/service-a/"
                          route:
                            cluster: app1-service-a-0-0-32

                        - match:
                            prefix: "/app1/service-b/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "2"
                          route:
                            cluster: app1-service-b-0-0-5

                        - match:
                            prefix: "/app1/service-b/"
                          route:
                            cluster: app1-service-b-0-0-5
                        
                        - match:
                            prefix: "/shared/service-s/"
                            headers:
                              - name: "X-App-Stack-Version"
                                string_match:
                                  exact: "2"
                          route:
                            cluster: app1-service-s-0-0-1

                        - match:
                            prefix: "/"
                          route:
                            cluster: app1-service-a-0-0-30

                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: mfe-a-0-0-3
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mfe-a-0-0-3
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mfe-a-0-0-3
                      port_value: 80

    - name: service-a-0-0-32
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service-a-0-0-32
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-a-0-0-32
                      port_value: 80

    - name: service-b-0-0-4
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service-b-0-0-4
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-b-0-0-4
                      port_value: 80

    - name: service-b-0-0-5
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service-b-0-0-5
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-b-0-0-5
                      port_value: 80
